--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ on:
          description: 'Android'
 
 env:
-  GENERAL_FLAGS: "-DRETRO_DISABLE_PLUS=ON -DCMAKE_BUILD_TYPE=Release -DRETRO_SDL_VERSION=2 -DRETRO_USE_HW_RENDER=OFF -DRETRO_USE_STEAM=OFF -DRETRO_USE_DISCORD=OFF -DRETRO_ICON_NAME=\"RSDKv4 Decomp Icon.ico\" -DRETRO_OUTPUT_NAME=\"RSDKv4+\""
+  GENERAL_FLAGS: "-DRETRO_DISABLE_PLUS=OFF -DCMAKE_BUILD_TYPE=Release -DRETRO_SDL_VERSION=2 -DRETRO_USE_HW_RENDER=OFF -DRETRO_USE_STEAM=OFF -DRETRO_USE_DISCORD=OFF -DRETRO_ICON_NAME=\"RSDKv4 Decomp Icon.ico\" -DRETRO_OUTPUT_NAME=\"RSDKv4+\""
   # Normally you would use $VCPKG_INSTALLATION_PATH, but it's broken...so hardcode C:/vcpkg
   GENERAL_WIN_FLAGS: "-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
   WIN32_FLAGS: "-DVCPKG_TARGET_TRIPLET=x86-windows-static -DCMAKE_PREFIX_PATH=C:/vcpkg/installed/x86-windows-static/ -A Win32"
@@ -130,7 +130,7 @@ jobs:
       - name: Build RSDKv4 Android
         working-directory: ./android
         run: |
-          ./gradlew.bat assembleDebug --no-daemon -PABIFILTERS="armeabi-v7a;arm64-v8a" -PRETRO_DISABLE_PLUS
+          ./gradlew.bat assembleDebug --no-daemon -PABIFILTERS="armeabi-v7a;arm64-v8a"
       - name: Upload artifact Android
         uses: actions/upload-artifact@v4
         with:
@@ -164,3 +164,4 @@ jobs:
         with:
           name: v4-linux
           path: linux.tar.gz
+
